# compressbench

./: .travis.yml  CMakeLists.txt  README  README.md  create-log.sh
src/: CMakeLists.txt  defines.hpp  main.cpp
src/codecs/: BWT.cpp  BWT.hpp  Huffman.cpp  Huffman.hpp  ICodec.hpp  IEncoder.hpp  LZ78.cpp  LZ78.hpp  LZ78NR.cpp  LZ78NR.hpp  MTF.cpp  MTF.hpp  RLE.cpp  RLE.hpp
src/codecs/huffman/: BinaryIO.cpp  BinaryIO.hpp  HNode.cpp  HNode.hpp
src/codeschemes/: HuffBwt.cpp  HuffBwt.hpp  HuffMtfBwt.cpp  HuffMtfBwt.hpp  HuffMtfRleBwt.cpp  HuffMtfRleBwt.hpp  HuffRleBwt.cpp  HuffRleBwt.hpp  HuffRleMtfBwt.cpp  HuffRleMtfBwt.hpp  Lz.cpp  Lz.hpp  LzNoReset.cpp  LzNoReset.hpp
src/test/: Makefile  TestBWT.cpp  TestBWT2.cpp  TestBinIO.cpp  TestHNode.cpp  TestHuffBWT.cpp  TestHuffman.cpp  TestMTF.cpp  TestRLE.cpp  clean.sh  run.sh  testRepeat
